--- a/OperatingSystem.cabal
+++ b/OperatingSystem.cabal
@@ -62,7 +62,12 @@ executable OperatingSystem
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:
+                      CommandExecutors,
+                      FsNodeOperations,
+                      FsNode,
+                      Utils,
+                      MainCommands
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
